# tailscale-nss

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: config.rs  file_cache.rs  lib.rs  tailscale.rs  uid.rs
tests/: mock_tailscaled.py
