[package]
name = "tailscale-nss"
version = "0.1.0"
edition = "2021"
description = "NSS plugin that synthesizes UNIX users from a tailnet's peer list"
license = "MIT"

[lib]
# Two consumers in the same package:
#   * `cdylib` — `libnss_<name>.so.2` is what glibc dlopens. The `.2` suffix
#     is renamed in at install time. cdylib gives us a clean shared object
#     without Rust runtime symbol leakage.
#   * `rlib` — needed so the side-car daemon (`src/bin/tailscale-nss-syncd.rs`)
#     in this same package can `use nss_tailscale::tailscale::*;` and share
#     the tailscaled client / file cache code with the plugin.
name = "nss_tailscale"
crate-type = ["cdylib", "rlib"]

# Side-car daemon that polls tailscaled, atomically writes the result to
# /run/tailscale-nss/users.json, and ensures /home/<user> exists for each
# synthesized user. Lets every NSS lookup answer from a small file read
# instead of paying a tailscaled round-trip on cache miss.
[[bin]]
name = "tailscale-nss-syncd"
path = "src/bin/tailscale-nss-syncd.rs"

[dependencies]
libnss = "0.8"
# `libnss`'s `libnss_*_hooks!` macros expand to code that references
# `libc::passwd`, `libc::group`, errno constants, etc. directly, so we have
# to declare libc in the consumer crate, not just transitively.
libc = "0.2"
# `libnss` requires `paste` for its export macros.
paste = "1"
# Lazy-init for static configuration read from env vars.
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# NSS plugins are loaded into every NSS-using process (sshd, ls, ps, ...).
# Optimize for size and avoid panics-as-unwinds (would corrupt the host).
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
